[gd_scene load_steps=4 format=2]

[ext_resource path="res://scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://assests/images/player.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=3]
radius = 4.0
height = 8.0

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Body" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="NextJumpTimeout" type="Timer" parent="."]
one_shot = true

[node name="RayRight" type="RayCast2D" parent="."]
position = Vector2( 4, 0 )
enabled = true
cast_to = Vector2( 0, 8.1 )

[node name="RayLeft" type="RayCast2D" parent="."]
position = Vector2( -4, 0 )
enabled = true
cast_to = Vector2( 0, 8.1 )

